# swagger/swagger.json
@@ -12,35 +12,25 @@
     "host": "localhost:3000",
     "basePath": "/",
     "tags": [],
-    "schemes": [
-        "http"
-    ],
-    "consumes": [
-        "application/json"
-    ],
-    "produces": [
-        "application/json"
-    ],
+    "schemes": ["http"],
+    "consumes": ["application/json"],
+    "produces": ["application/json"],
     "paths": {
         "/register": {
             "post": {
-                "tags": [
-                    "Register"
-                ],
+                "tags": ["Register"],
                 "description": "Register new user",
                 "parameters": [
                     {
                         "name": "Register",
                         "in": "body",
                         "description": "User that we want to register",
-                        "schema": {
+                        "schema": { 
                             "$ref": "#/definitions/registerUser"
                         }
                     }
                 ],
-                "produces": [
-                    "application/json"
-                ],
+                "produces": ["application/json"],
                 "responses": {
                     "201": {
                         "description": "New user is Registered"
@@ -56,9 +46,7 @@
         },
         "/login": {
             "post": {
-                "tags": [
-                    "Login"
-                ],
+                "tags": ["Login"],
                 "description": "Login user",
                 "parameters": [
                     {
@@ -70,9 +58,8 @@
                         }
                     }
                 ],
-                "produces": [
-                    "application/json"
-                ],
+
+                "produces": ["application/json"],
                 "responses": {
                     "200": {
                         "description": "ok"
@@ -82,8 +69,70 @@
                     }
                 }
             }
+        },
+
+        "/forgotpassword": {
+            "post": {
+                "tags": ["forgotPassword"],
+                "description": "Send password link",
+                "parameters": [
+                    {
+                        "name": "forgotpassword",
+                        "in": "body",
+                        "description": "Sent password resent link",
+                        "schema": {
+                            "$ref": "#/definitions/forgotpassword"
+                        }
+                    }
+                ],
+                "produces": ["application/json"],
+                "responses": {
+                    "200": {
+                        "description": "ok"
+                    },
+                    "404": {
+                        "description": "Not Found"
+                    }
+                }
+            }
+        },
+
+        "/reset-Password": {
+            "put": {
+                "tags": [
+                    "reset password"
+                ],
+                "description": "Already registered ? Then reset password successfully !!",
+                "parameters": [
+        
+                    {
+                        "name": "Reset Password",
+                        "in": "body",
+                        "description": "Reset Password with code",
+                        "schema": {
+                            "$ref": "#/definitions/resetPassword"
+                        }
+                    }
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "responses": {
+                    "200": {
+                        "description": "reset password succesfully !!"
+                    },
+                    "400": {
+                        "description": "Incorrect Password for reset password"
+                    },
+                    "500": {
+                        "description": "Internal server error"
+                    }
+                }
+            }
         }
     },
+    
+
     "definitions": {
         "registerUser": {
             "type": "object",
@@ -100,6 +149,7 @@
                 "password": {
                     "type": "string"
                 }
+                
             }
         },
         "loginUser": {
@@ -112,6 +162,28 @@
                     "type": "string"
                 }
             }
+        },
+        "forgotpassword": {
+            "type": "object",
+            "properties": {
+                "email": {
+                    "type": "string"
+                }
+            }
+        },
+        "resetPassword": {
+            "type": "object",
+            "properties": {
+                "email": {
+                    "type": "string"   
+                },
+                "newPassword":{
+                    "type":"string"
+                },
+                "code":{
+                    "type":"string"
+                }
+            }   
         }
     }
 }
